Closed
Bug 1869822
Opened 2 years ago
Closed 2 years ago
Crash in [@ mozilla::gfx::MemWriter::write]
Categories
(Core :: Graphics: Canvas2D, defect, P1)
Tracking
()
RESOLVED
FIXED
122 Branch
| Tracking | Status | |
|---|---|---|
| firefox-esr115 | --- | unaffected |
| firefox120 | --- | unaffected |
| firefox121 | --- | unaffected |
| firefox122 | --- | fixed |
People
(Reporter: aosmond, Assigned: bobowen)
References
(Blocks 1 open bug, Regression)
Details
(Keywords: crash, regression)
Crash Data
Attachments
(1 file)
Crash report: https://crash-stats.mozilla.org/report/index/d4354fb6-2e39-4969-b586-3b5060231213
Reason: EXCEPTION_ACCESS_VIOLATION_WRITE
Top 10 frames of crashing thread:
0 xul.dll mozilla::gfx::MemWriter::write gfx/2d/RecordedEvent.h:219
0 xul.dll mozilla::gfx::ElementStreamFormat<mozilla::gfx::MemWriter, mozilla::gfx::RecordedEvent::EventType>::Write gfx/2d/RecordingTypes.h:21
0 xul.dll mozilla::gfx::WriteElement gfx/2d/RecordingTypes.h:52
0 xul.dll mozilla::layers::CanvasDrawEventRecorder::WriteInternalEvent gfx/layers/CanvasDrawEventRecorder.cpp:152
0 xul.dll mozilla::layers::CanvasDrawEventRecorder::GetContiguousBuffer gfx/layers/CanvasDrawEventRecorder.cpp:200
1 xul.dll mozilla::gfx::ContiguousBufferStream::RecordEvent<mozilla::gfx::RecordedPushClipRect> gfx/2d/RecordedEvent.h:279
2 xul.dll mozilla::gfx::DrawTargetRecording::ClearRect gfx/2d/DrawTargetRecording.cpp:492
3 xul.dll mozilla::dom::CanvasRenderingContext2D::ClearRect dom/canvas/CanvasRenderingContext2D.cpp:2981
4 xul.dll mozilla::dom::CanvasRenderingContext2D_Binding::clearRect dom/bindings/CanvasRenderingContext2DBinding.cpp:6869
5 xul.dll mozilla::dom::binding_detail::GenericMethod<mozilla::dom::binding_detail::NormalThisPolicy, mozilla::dom::binding_detail::ThrowExceptions> dom/bindings/BindingUtils.cpp:3320
Flags: needinfo?(bobowencode)
Comment 1•2 years ago
|
||
Set release status flags based on info from the regressing bug 1863914
status-firefox120:
--- → unaffected
status-firefox121:
--- → unaffected
status-firefox122:
--- → affected
status-firefox-esr115:
--- → unaffected
| Assignee | ||
Updated•2 years ago
|
Assignee: nobody → bobowencode
Severity: -- → S4
Status: NEW → ASSIGNED
Flags: needinfo?(bobowencode)
Priority: -- → P1
| Assignee | ||
Comment 2•2 years ago
|
||
Pushed by bobowencode@gmail.com:
https://hg.mozilla.org/integration/autoland/rev/821a334d187a
Check that mCurrentBuffer is valid in CanvasDrawEventRecorder::GetContiguousBuffer. r=aosmond
Comment 4•2 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 122 Branch
| Reporter | ||
Updated•2 years ago
|
Crash Signature: [@ mozilla::gfx::MemWriter::write] → [@ mozilla::gfx::MemWriter::write]
[@ memcpy | mozilla::gfx::MemWriter::write ]
| Reporter | ||
Updated•2 years ago
|
Crash Signature: [@ mozilla::gfx::MemWriter::write]
[@ memcpy | mozilla::gfx::MemWriter::write ] → [@ mozilla::gfx::MemWriter::write]
[@ memcpy | mozilla::gfx::MemWriter::write ]
[@ OOM | unknown | mozilla::gfx::MemWriter::write ]
| Reporter | ||
Updated•2 years ago
|
Blocks: accelerated-canvas-recording
You need to log in
before you can comment on or make changes to this bug.
Description
•