Bug 1869822: Check that mCurrentBuffer is valid in CanvasDrawEventRecorder::GetContiguousBuffer. r=aosmond

Differential Revision: https://phabricator.services.mozilla.com/D196313